Use Java 8 (#42)
* Use Java 8

Java 7 is end of life since many years.
Jenkins 2.60.1 is the first Jenkins version requiring Java 8.
For more details see https://jenkins.io/changelog-stable/#v2.60.1

Use Jenkins 2.60.3 to get at least some more bug fixes.
Use Groovy 2.4.8 as Jenkins 2.60.3 uses this version.
Remove XX:MaxPermSize as it is not supported in Java 8 anymore.

* Fix synchronizationMillis calculation

Calling currentTimeMillis() two times and rearding synchronization time in
the incorrect order could result in a negative synchronizationMillis value.

Therefore IntegrationTest::issue21 was failing most of the time.